Exercicis/Exercici4/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: ns-practica4
  name: ns-practica4
