Exercicis/Exercici4/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: ns-practica4
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: echoserver
  type: ClusterIP
